--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "deepmerge": "^4.3.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
+    "lodash": "^4.17.21",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -27,5 +29,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.194"
   }
 }
