--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "yarn run codegen",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/node": "18.16.3",
     "@types/react": "18.2.4",
     "@types/react-dom": "18.2.3",
@@ -31,6 +34,10 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.194"
+    "@graphql-codegen/cli": "3.3.1",
+    "@graphql-codegen/client-preset": "3.0.1",
+    "@graphql-codegen/introspection": "^3.0.1",
+    "@types/lodash": "^4.14.194",
+    "ts-node": "^10.9.1"
   }
 }
